[tool.poetry]
name = "blog_backend"
version = "0.1.0"
description = ""
authors = ["add-bakkers <add.re.0828@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.18.2"
fastapi = "^0.79.1"
SQLAlchemy = "^1.4.40"
aiomysql = "^0.1.1"
cryptography = "^37.0.4"

[tool.poetry.dev-dependencies]
fastapi = "^0.79.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
